--- a/style.css
+++ b/style.css
@@ -160,47 +160,6 @@ nav ul li a:hover:after{
     display:block;
 }
 
-#services{
-    padding: 30px 0;
-
-}
-
-.services-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    grid-gap: 40px;
-    margin-top:50px;
-}
-
-.services-list div{
-    background: #262626;;
-    padding:40px;
-    font-size: 13px;
-    font-weight: 300;
-    border-radius: 10px;
-    transition: background 0.5s, transform 0.5s;
-}
-
-.services-list div h2{
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 15px;
-}
-
-.services-list div a{
-    text-decoration: none;
-    color: lightblue;
-    font-size:12px;
-    margin-top:20px;
-    display:inline-block;
-}
-
-.services-list div:hover{
-
-    background: lightblue;
-    transform: translateY(-10px);
-}
-
 /* ------------Projects---------- */
 
 #projects{
@@ -363,4 +322,12 @@ form .formbtn{
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
+}
+
+#msg{
+    padding-left: 42%;
+    padding-top: 20%;
+    padding-bottom: 10px;
+    color:green;
+
 }
