--- a/style.css
+++ b/style.css
@@ -165,8 +165,8 @@ nav ul li a:hover:after{
 #projects{
     padding-right: 10%;
     padding-left: 10%;
-    padding-top: 10%;
-    padding-bottom: 20%;
+    padding-top: 0;
+    padding-bottom: 10%;
 }
 
 #projects h1{
@@ -178,17 +178,13 @@ nav ul li a:hover:after{
     grid-gap:10%;
     margin-top: 100px;
     margin-right: 50px;
-    color:darkblue;
+    color:black;
 }
 
 .project{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
-}
-
-.project h3{
-    font-style:bold;
 }
 
 .project img{
@@ -214,8 +210,8 @@ nav ul li a:hover:after{
     flex-direction: column;
     padding:0, 40px;
     text-align: left;
-    font-size: 14px;
-    transition:height 0.5s;
+    font-size: 20px;
+    transition: height 0.5s;
 }
 
 .layer .text{
@@ -223,12 +219,16 @@ nav ul li a:hover:after{
     margin-right: 5%;
     margin-top: 30%;
     text-align: center;
+    font-weight: 500;
 
 }
 
 .layer h3{
-    font-weight: 500;
+    font-weight: 800;
     margin-bottom: 20px;
+    font-size: 25px;
+    text-decoration: line;
+    text-decoration-line: underline;
 }
 
 .project:hover img{
