--- a/style.css
+++ b/style.css
@@ -187,6 +187,10 @@ nav ul li a:hover:after{
     overflow: hidden;
 }
 
+.project h3{
+    font-style:bold;
+}
+
 .project img{
     width:100%;
     height: 100%;
@@ -211,13 +215,13 @@ nav ul li a:hover:after{
     padding:0, 40px;
     text-align: left;
     font-size: 20px;
-    transition: height 0.5s;
+    transition:height 0.5s;
 }
 
 .layer .text{
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 30%;
+    margin-top: 20%;
     text-align: center;
     font-weight: 500;
 
@@ -226,9 +230,8 @@ nav ul li a:hover:after{
 .layer h3{
     font-weight: 800;
     margin-bottom: 20px;
-    font-size: 25px;
-    text-decoration: line;
-    text-decoration-line: underline;
+    font-size:25px;
+    text-decoration-line:underline;
 }
 
 .project:hover img{
@@ -322,12 +325,4 @@ form .formbtn{
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
-}
-
-#msg{
-    padding-left: 42%;
-    padding-top: 20%;
-    padding-bottom: 10px;
-    color:green;
-
 }
