--- a/style.css
+++ b/style.css
@@ -163,10 +163,7 @@ nav ul li a:hover:after{
 /* ------------Projects---------- */
 
 #projects{
-    padding-right: 10%;
-    padding-left: 10%;
-    padding-top: 0;
-    padding-bottom: 10%;
+    padding: 50px,0;
 }
 
 #projects h1{
@@ -174,10 +171,10 @@ nav ul li a:hover:after{
 }
 .project-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
-    grid-gap:10%;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap:40px;
     margin-top: 100px;
-    margin-right: 50px;
+    margin-right: 10px;
     color:black;
 }
 
@@ -192,11 +189,11 @@ nav ul li a:hover:after{
 }
 
 .project img{
-    width:100%;
+    width: 100%;
     height: 100%;
     border-radius: 10px;
     display:block;
-    transition: transform 0.5s;
+    transition:transform 0.5s;
     transform:scale(1.03);
 }
 
@@ -244,6 +241,9 @@ nav ul li a:hover:after{
 
 /* --------------------CONTACT-------------- */
 
+#contact{
+    padding-top:100px;
+}
 .contact-left{
     flex-basis: 35%;
 }
@@ -316,13 +316,4 @@ form .formbtn{
     margin-top: 20px;
     cursor:pointer;
     outline: none;
-}
-
-.copyright{
-    width:100%;
-    text-align: center;
-    padding: 25px;
-    background: #262626;
-    font-weight: 300;
-    margin-top: 20px;
 }
